# mstickerpicker

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  build.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
.github/workflows  /: rust.yml
assets/: style.css
dummy-libsqlite3-sys/: Cargo.toml
dummy-libsqlite3-sys/src/: lib.rs
src/: error.rs  html.rs  logging.rs  main.rs  sql.rs  style.rs  tera.rs  user.rs
src/app/: mod.rs
src/app/activities/: home.rs  mod.rs  user_home.rs
src/components/: input.rs  mod.rs  style.css
src/js/: widget-api.js
src/matrix/: cli.rs  join.rs  message.rs  mod.rs
src/matrix/cli/: import.rs  mod.rs
src/migrations/: 000_v0.2.0_create_user_table.sql  001__v0.2.0__create_users.sql  002__v0.2.0__uploaded_files.sql
src/routes/: css.rs  index.rs  login.rs  mod.rs  picker.rs  register.rs
src/server/: error.rs  mod.rs  sql.rs
src/server/matrix/: join.rs  message.rs  mod.rs
src/server/matrix/cli/: mod.rs  web_login.rs
src/templates/: base.html.tera  head.html.tera  index.html.tera  picker.html.tera  style.css.tera
