[package]
name = "mstickerpicker"
version = "0.2.0"
authors = ["luckyturtledev <git@lukas1818.de>"]
edition = "2021"
publish = false

reslover = 2


[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", optional = true }
clap = { version = "4.5.20", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-logger = { version = "0.5.1", optional = true }
dotenv = { version = "0.15.0", optional = true }
envconfig = { version = "0.11.0", optional = true }
log = { version = "0.4.22", optional = true }
matrix-sdk = { version = "0.7.1", default-features = false, features = ["native-tls", "e2e-encryption"], optional = true }
my-env-logger-style = { version = "0.2.0", optional = true }
once_cell = { version = "1.20.2", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", optional = true, default-features = false, features = ["runtime-tokio", "migrate", "postgres", "macros"] }
tokio = { version = "1.40.0", optional = true }


[features]
default = []
server = ["axum", "dioxus/axum", "dotenv", "envconfig", "matrix-sdk", "log", "once_cell", "my-env-logger-style", "sqlx", "tokio"]
web = ["dioxus/web", "dioxus-logger"]



# Due a bug in cargo, cargo tries still to resolve deactivated weak dependencies.
# So cargo fails to select a libsqlite3-sys version, because matrix and sqlx both depend on a different version,
# which depend on a different version of the c-lib (we can only link one version of the same c-lib).
# see https://github.com/launchbadge/sqlx/issues/3556#event-14604540198
# Hack: patch the unused libsqlite3-sys version, so its do not depend on the c lib anymore.
[patch.crates-io]
libsqlite3-sys = { path = "./dummy-libsqlite3-sys" }
